# VectorQuant

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
benchmarks/: bench_covariance.py  bench_gpu_monte_carlo.py  bench_monte_carlo.py  bench_portfolio_optimization.py  bench_regression.py
examples/: 01_monte_carlo.py  02_portfolio_optimization.py  03_llm_verification.py  quickstart.py
tests/: test_ai_reasoning.py  test_core.py  test_events.py  test_factor_models.py  test_finance.py  test_gpu_fallback.py  test_llm_interface.py  test_numerical_stability.py  test_public_api.py
vectorquant/: __init__.py
vectorquant/ai/: __init__.py  asset_universe.py  decision_engine.py  explainability.py  hallucination_check.py  llm.py  pipeline.py  proof_trace.py  reasoning.py  rl_allocation.py  strategy_lifecycle.py  tools.py  verify.py
vectorquant/core/: __init__.py  config.py  information_theory.py  linear_algebra.py  numerical_methods.py  numerical_stability.py  optimization.py  probability.py  statistics.py  symbolic_math.py
vectorquant/finance/: __init__.py  covariance.py  decision_theory.py  derivatives.py  extreme_value_theory.py  factor_models.py  financial_math.py  macro_models.py  market_microstructure.py  network_theory.py  portfolio.py  risk_attribution.py  risk_models.py  risk_monitoring.py  risk_parity.py  stress_testing.py  volatility_surface.py
vectorquant/infrastructure/: __init__.py  data_quality.py  parallel_engine.py
vectorquant/research/: __init__.py  backtesting.py  calibration.py  discovery.py  event_components.py  events.py  (+4 more)
(+7 files in other folders)
